--- a/studio.html
+++ b/studio.html
@@ -481,8 +481,10 @@
         جاهزة
       </button>
     </div>
+    <button class="anim-btn" id="loopBtn" onclick="toggleLoop()" title="تكرار التشغيل" style="width:auto;padding:0 0.5rem;font-size:0.68rem;font-weight:700;color:var(--accent2)">🔁 تكرار</button>
+    <button class="anim-btn" id="onionBtn" onclick="toggleOnionSkin()" title="بصل - إظهار الفريم السابق" style="width:auto;padding:0 0.5rem;font-size:0.68rem;font-weight:700;color:var(--text2)">🧅 بصل</button>
     <button class="anim-btn" onclick="exportGIF()" title="تصدير GIF" style="width:auto;padding:0 0.6rem;font-size:0.7rem;font-weight:700;background:rgba(78,205,196,0.15);border-color:var(--accent2);color:var(--accent2)">GIF</button>
-    <button class="anim-btn" onclick="exportVideo()" style="width:auto;padding:0 0.6rem;font-size:0.7rem;font-weight:700;background:rgba(255,107,107,0.15);border-color:var(--accent1);color:var(--accent1)">فيديو</button>
+    <button class="anim-btn" onclick="exportVideo()" style="width:auto;padding:0 0.6rem;font-size:0.7rem;font-weight:700;background:rgba(255,107,107,0.15);border-color:var(--accent1);color:var(--accent1)">📹 فيديو</button>
   </div>
   <div class="anim-timeline" id="animTimeline"></div>
 </div>
